# ConsoleMusicPlayer

./: CMakeLists.txt  README.md  libbassConfig.cmake
MusicPlayer/: Common.h  Console.h  Lyrics.h  Main.cpp  Player.h
